TestInstanceLauncher improvements (#118)